--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,10 +13,11 @@
         </div>
       </li>
       <li>
-        <%= image_tag 'bread2.jpg' %> 
+        <%= image_tag 'pastry2.jpg' %> 
         <div class="caption left-align">
           <h3>Baked fresh every day.</h3>
-          <h5 class="light grey-text text-lighten-3">We work hard to deliver quality bread.</h5>
+          <h5 class="light grey-text text-lighten-3">We work hard to deliver quality bread.</h5><br><br>  
+          <a class="btn materialize-red lighten-5" href="#">About Us</a>
         </div>
       </li>
       <li>
@@ -24,7 +25,7 @@
         <div class="caption right-align">
           <h3>We have muffins.</h3>
           <h5 class="light grey-text text-lighten-3">You'll love our muffins.</h5>
-          <
+          <a class="btn materialize-red lighten-3" href="#">Explore Our Menu</a>
         </div>
       </li>
       <li>
@@ -32,6 +33,7 @@
         <div class="caption center-align">
           <h3>Our new pastry products!</h3>
           <h5 class="light grey-text text-lighten-3">A delicious day is just a click away. Order today.</h5>
+          <a class="btn materialize-red lighten-1" href="#">Make An Order</a>
         </div>
       </li>
     </ul>
