--- a/app/views/partials/_quick_links.html.erb
+++ b/app/views/partials/_quick_links.html.erb
@@ -15,7 +15,7 @@
       <div class="collapsible-body side-bar-option"><%= link_to 'Add a New Address', new_address_path, :class=>" materialize-red-text text-lighten-2" %></div>
     </li>
     <li>
-      <div class="collapsible-header"><i class="mdi-maps-local-cafe"></i>Orders</div>
+      <div class="collapsible-header"><i class="mdi-maps-local-grocery-store"></i>Orders</div>
       <div class="collapsible-body side-bar-option"><%= link_to 'View Orders', orders_path, :class=>" materialize-red-text text-lighten-2" %></div>
       <div class="collapsible-body side-bar-option"><%= link_to 'Add a New Order', new_order_path, :class=>" materialize-red-text text-lighten-2" %></div>
     </li>
