--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,5 +1,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @customers %> |
-<%= link_to 'Back', customers_path %>
+<%= link_to 'Show', @customers %> 
