--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= stylesheet_link_tag "materialize.css" %>
   <!-- Compiled and minified CSS -->
   <link href='http://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet' type='text/css'>
-
+  <%= csrf_meta_tags %>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/js/materialize.min.js"></script>
 </head>
