--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,6 @@
 <% if @orders.empty? %>
- <h4>There are no orders at this time.</h4>
+ <h4 class="center-align">There are no orders at this time.</h4><br><br>
+ <p>You have no orders. Create one now!</p>
 <% else %>
 <h3>All Orders</h3>
 
@@ -10,6 +11,8 @@
       <th>Customer</th>
       <th>Recipient</th>
       <th>Cost</th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -19,6 +22,8 @@
     <td><%= link_to order.customer.name, customer_path(order.customer) %></td>
     <td><%= order.address.recipient %></td>
     <td>$<%= sprintf "%.2f", order.grand_total %></td>
+    <td><%= link_to 'Edit', edit_order_path(order), :class => 'btn materialize-red lighten-5' %></td>
+    <td><%= link_to 'Destroy', order, :class => 'btn materialize-red lighten-3', method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
