contact us page

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,6 +1,6 @@
 <% if @customers.empty? %>
- <h4>No active customers at this time</h4>
- 
+ <h4 class="materialize-red-text text-lighten-1 center-align">No active customers at this time.</h4>
+ <br><br>
 <% else %>
 <h3 class="materialize-red-text text-lighten-1"> Customers </h3>
 
