--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,5 @@
 <% if @orders.empty? %>
- <h4 class="center-align">There are no orders at this time.</h4><br><br>
+ <h4 class="materialize-red-text text-lighten-1 center-align">There are no orders at this time.</h4><br><br>
  <p>You have no orders. Create one now!</p>
 <% else %>
 <h3>All Orders</h3>
