products cuz y not

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 <body>
   <nav>
     <div class="nav-wrapper container materialize-red lighten-4">
-      <%= link_to image_tag 'logo.png', { :class=> "jeanine-logo" } %>
+      <%= image_tag 'logo.png', { :class=> "jeanine-logo" } %>
       <%= link_to "Bread Express", home_path, { :class=> "brand-logo left" } %>
       <ul class="right">
         <li><a class="dropdown-button" href="customers/index.html" data-activates="dropdown1">Customers<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
