--- a/app/views/partials/_quick_links.html.erb
+++ b/app/views/partials/_quick_links.html.erb
@@ -21,10 +21,10 @@
     </li>
     <li>
       <div class="collapsible-header"><i class="mdi-maps-local-cafe"></i>Our Products</div>
-      <div class="collapsible-body side-bar-option"><a class="materialize-red-text text-lighten-2" href="#!">Freshly Baked Breads</a></div>
-      <div class="collapsible-body side-bar-option"><a class="materialize-red-text text-lighten-2" href="#!">Pastries</a></div>
-      <div class="collapsible-body side-bar-option"><a class="materialize-red-text text-lighten-2" href="#!">Muffins</a></div>
-      <div class="collapsible-body side-bar-option"><a class="materialize-red-text text-lighten-2" href="#!">Bagels</a></div>
+      <div class="collapsible-body side-bar-option"><%= link_to 'Freshly Baked Breads', :products, :class=>" materialize-red-text text-lighten-2" %></div>
+      <div class="collapsible-body side-bar-option"><%= link_to 'Pastries', :products, :class=>" materialize-red-text text-lighten-2" %></div>
+      <div class="collapsible-body side-bar-option"><%= link_to 'Muffins', :products, :class=>" materialize-red-text text-lighten-2" %></div>
+      <div class="collapsible-body side-bar-option"><%= link_to 'Bagels', :products, :class=>" materialize-red-text text-lighten-2" %></div>
     </li>
   </ul>
 </div>
