--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,19 +1,19 @@
 <div id = "main_content">
   <div class="row">
-        <div class="col s12">
-          <div class="card materialize-red lighten-5">
-            <div class="card-image">
-              <%= image_tag 'bakery.jpg' %>
-            </div>
-            <div class="card-content white-text">
-              <span class="card-title">We are Bread Express</span>
-              <p>Bread Express began in 2007. Founded by Alex and Mark Heimann, the company offers a wide selection of breads, muffins, and pastries to hungry customers all over Pittsburgh. The staff is strong committed to baking the most delicious breads in the world, and has been very successful.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">Contact Us</a>
-              <a href='#'>Visit Us</a>
-            </div>
-          </div>
+    <div class="col s12">
+      <div class="card materialize-red lighten-5">
+        <div class="card-image">
+          <%= image_tag 'bakery.jpg' %>
+        </div>
+        <div class="card-content white-text">
+          <span class="card-title">We are Bread Express</span>
+          <p>Bread Express began in 2007. Founded by Alex and Mark Heimann, the company offers a wide selection of breads, muffins, and pastries to hungry customers all over Pittsburgh. The staff is strong committed to baking the most delicious breads in the world, and has been very successful.</p>
+        </div>
+        <div class="card-action">
+          <%= link_to "Contact Us", :contact %>
+          <a href='#'>Visit Us</a>
         </div>
       </div>
+    </div>
+  </div>
 </div>
