--- a/app/views/home/privacy.html.erb
+++ b/app/views/home/privacy.html.erb
@@ -1,3 +1,21 @@
 <div id="main_content">
-<h1>Privacy</h1>
+<div class="row">
+    <div class="col s12">
+      <div class="card materialize-red lighten-1">
+        <div class="card-image">
+          <%= image_tag 'privacy.jpg' %>
+        </div>
+        <div class="card-content white-text">
+          <span class="card-title">Privacy Policy</span>
+          <p>This policy describes the personal information we collect on breadexpress.com and any other authorized sites, services and tools where this policy appears (collectively, this "Site"), how we use it, and when we share it with third parties. Program terms applicable to Programs not described herein or in the Terms of Use Statement provide additional information about information collected related to that Program(s) and how it is used in connection with the applicable Program. This policy applies only to information collected via this Site, and unless otherwise specifically described herein or in any Program terms, does not apply to information collected offline (including but not limited to information you may provide over the phone, via fax, or on third party sites). Please note that not all of the features/functionality described are available on or through each portion of the Site.
+		  By using this Site, you agree to this Privacy Policy and to the Terms of Use statement ("Statement") governing its use and Program terms applicable to various Programs. If you have questions, comments or concerns about this Privacy Policy, please Contact Us. Be sure to check this page periodically for updates, as your continued use of this Site and/or participation in any Program signifies your acceptance of any changed terms.</p>
+        </div>
+        <div class="card-action">
+          <%= link_to "Contact Us", :contact %>
+          <a href='#'>Visit Us</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
