--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -5,7 +5,7 @@
         <h5 class="promo-label">Our Company</h5>
         <%= link_to 'About Bread Express', about_path, :class=>"promo-links materialize-red-text text-lighten-2" %><br />
         <a class="promo-links materialize-red-text text-lighten-2" href="#!">Visit Us</a><br/>
-        <a class="promo-links materialize-red-text text-lighten-2" href="#!">Products</a>
+        <%= link_to "Products", :products, :class=>"promo-links materialize-red-text text-lighten-2" %>
         
     </div>
     <div class="col s4">
