--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
         <div class="caption left-align">
           <h3>Baked fresh every day.</h3>
           <h5 class="light grey-text text-lighten-3">We work hard to deliver quality bread.</h5><br><br>  
-          <a class="btn materialize-red lighten-5" href="#">About Us</a>
+          <%= link_to "About Us", :about, :class=>"btn materialize-red lighten-5" %>
         </div>
       </li>
       <li>
@@ -25,7 +25,7 @@
         <div class="caption right-align">
           <h3>We have muffins.</h3>
           <h5 class="light grey-text text-lighten-3">You'll love our muffins.</h5>
-          <a class="btn materialize-red lighten-3" href="#">Explore Our Menu</a>
+          <%= link_to "Explore Our Menu", :products, :class=>"btn materialize-red lighten-3" %>
         </div>
       </li>
       <li>
@@ -48,7 +48,7 @@
         <p>Our bakers work each and every day, hand-shaping and scoring the dough to provide our customers freshly baked bread.</p>
       </div>
       <div class="card-action">
-        <a href="#">Explore Our Menu</a>
+        <%= link_to "Explore Our Menu", :products %></a>
       </div>
     </div>
   </div>
